--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: ruby
 rvm:
-    - 2.1.1
+        - 2.1.1
 addons:
-	postgresql: "9.3"
+        postgresql: "9.3"
 before_script:
-  - psql -c 'create database travis_ci_test;' -U postgres
-  - cp config/database.yml.travis config/database.yml
+        - psql -c 'create database travis_ci_test;' -U postgres
+        - cp config/database.travis.yml config/database.yml
