--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,10 @@ addons:
         postgresql: "9.3"
 before_script:
         - psql -c 'create database travis_ci_test;' -U postgres
-        - cp config/database.travis.yml config/database.yml
+        - cp config/database.yml.travis config/database.yml
+notifications:
+    email:
+        recipients:
+            - lab@ciudadanointeligente.org
+        on_success: change
+        on_failure: always
