--- a/config/vizard.yml
+++ b/config/vizard.yml
@@ -1,4 +1,11 @@
+production:
+  root_url: ~
+  smtp_setting_address: 'smtp.gmail.com'
+  smtp_setting_port: 587
+  smtp_setting_username: ''
+  smtp_setting_password: ''
 development:
+  root_url: 'http://localhost'
   smtp_setting_address: 'smtp.gmail.com'
   smtp_setting_port: 587
   smtp_setting_username: ''
