--- a/config/vizard.yml
+++ b/config/vizard.yml
@@ -5,7 +5,13 @@ production:
   smtp_setting_username: ''
   smtp_setting_password: ''
 development:
-  root_url: 'http://localhost'
+  root_url: 'http://localhost:3000'
+  smtp_setting_address: 'smtp.gmail.com'
+  smtp_setting_port: 587
+  smtp_setting_username: ''
+  smtp_setting_password: ''
+test:
+  root_url: 'http://localhost:3000'
   smtp_setting_address: 'smtp.gmail.com'
   smtp_setting_port: 587
   smtp_setting_username: ''
