and again change var name

--- a/config/vizard.yml
+++ b/config/vizard.yml
@@ -1,17 +1,17 @@
 production:
-  BASE_URL: ~
+  ROOT_URL: ~
   SMTP_SETTING_ADDRESS: 'smtp.gmail.com'
   SMTP_SETTING_PORT: 587
   SMTP_SETTING_USERNAME: ''
   SMTP_SETTING_PASSWORD: ''
 development:
-  BASE_URL: 'http://localhost:3000'
+  ROOT_URL: 'http://localhost:3000'
   SMTP_SETTING_ADDRESS: 'smtp.gmail.com'
   SMTP_SETTING_PORT: 587
   SMTP_SETTING_USERNAME: ''
   SMTP_SETTING_PASSWORD: ''
 test:
-  BASE_URL: 'http://localhost:3000'
+  ROOT_URL: 'http://localhost:3000'
   SMTP_SETTING_ADDRESS: 'smtp.gmail.com'
   SMTP_SETTING_PORT: 587
   SMTP_SETTING_USERNAME: ''
