fix apartment elevator initializer and hide vizard secrets

--- a/config/vizard.yml.example
+++ b/config/vizard.yml.example
@@ -2,8 +2,8 @@ development:
   BASE_URL: 'estratega.io'
   SMTP_SETTING_ADDRESS: 'smtp.postmarkapp.com'
   SMTP_SETTING_PORT: '2525'
-  SMTP_SETTING_USERNAME: '30c379ab-afa2-47b9-ac4e-bc868e61e2b4'
-  SMTP_SETTING_PASSWORD: '30c379ab-afa2-47b9-ac4e-bc868e61e2b4'
+  SMTP_SETTING_USERNAME: ''
+  SMTP_SETTING_PASSWORD: ''
   MAILER_SENDER: 'estratega@ciudadanointeligente.org'
   ADMIN_MAIL: 'estratega@ciudadanointeligente.org'
 test:
